# tech

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Makefile  todo.txt
.nvim/: .nvimrc.lua  dap.lua  keymaps.lua  lsp.lua  null_ls.lua
editor/: CMakeLists.txt
editor/include/: app.hpp
editor/src/: EditorRender.cpp  EditorRender.hpp  app.cpp  editor.cpp
engine/: CMakeLists.txt  Config.hpp.in  Settings.in
engine/Devices/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp  Window.cpp  Window.hpp
engine/Docs/: index.html
engine/Docs/css/: main.css
engine/Docs/js/: main.js
engine/Engine/: App.hpp  CVars.cpp  CVars.hpp  Commands.cpp  Commands.hpp  Engine.cpp  Engine.hpp  Events.cpp  Events.hpp  IniParser.cpp  IniParser.hpp  Log.cpp  Log.hpp  Module.hpp
engine/Files/: File.cpp  File.hpp  FileEntities.cpp  FileEntities.hpp  FileGltf.cpp  FileGltf.hpp
engine/Graphics/: Graphics.cpp  Graphics.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
engine/Guis/: Console.cpp  Console.hpp  Font.cpp  Font.hpp  Gui.cpp  Gui.hpp  Imgui.hpp
engine/Inputs/: Input.cpp  Input.hpp  InputButton.hpp  InputSceme.cpp  InputScheme.hpp
engine/Inputs/Buttons/: KeyboardInputButton.cpp  KeyboardInputButton.hpp
engine/Light/: Light.cpp  Light.hpp
engine/Maths/: ElapsedTime.cpp  ElapsedTime.hpp  Time.hpp  Time.inl  Transformation.hpp
engine/Maths/Vectors/: Coord2d.hpp  Matrix4.hpp  Vector2d.hpp  Vector3d.hpp  Vector4d.hpp  VectorBox2d.hpp  VectorPosition2d.hpp
engine/Models/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp
engine/Network/: Request.hpp
engine/Network/Sockets/: ClientSocket.cpp  ClientSocket.hpp  ServerSocket.cpp  ServerSocket.hpp
engine/Resources/: Resource.hpp  ResourcesManager.cpp  ResourcesManager.hpp
engine/Scenes/: Camera.hpp  Component.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneStructure.cpp  SceneStructure.hpp  Scenes.cpp  Scenes.hpp
engine/Scenes/Components/: Transform.cpp  Transform.hpp
engine/Scripts/Lua/: LuaBind.cpp  LuaBind.hpp
engine/States/: EnumStates.hpp  States.cpp  States.hpp
engine/Utils/: ComponentsFactory.hpp  ConstExpr.hpp  Delegate.hpp  Factory.hpp  NonCopyable.hpp  String.hpp  ThreadPool.cpp  ThreadPool.hpp  TypeInfo.hpp
game/: CMakeLists.txt  app.cpp  app.hpp  game.cpp
game/App/: CMakeLists.txt  app.cpp  app.hpp
game/App/Commands/: AppCommands.cpp  AppCommands.hpp
game/App/Gui/: GameGui.cpp  GameGui.hpp  Notify.hpp
game/App/Render/: GameRender.hpp
game/App/Scenes/MainMenu/: MainMenu.cpp  MainMenu.hpp
game/App/Scenes/MainMenu/Gui/: MenuGui.cpp
game/App/Scenes/World/: FPSCamera.cpp  FPSCamera.hpp  World.cpp  World.hpp
game/App/Scenes/World/Client/: Communication.hpp
game/App/Scenes/World/Events/: WorldEvents.hpp
game/App/Scenes/World/Gui/: WorldGui.cpp
game/App/Scenes/World/Gui/HUD/: HUDLayout.cpp  HUDLayout.hpp  SlotsContent.cpp  SlotsLayout.hpp
game/App/Scenes/World/Vars/: Entities.hpp
game/App/Scripts/: GameLog.hpp  LuaBind.cpp  LuaBind.hpp
game/App/States/: GameStates.hpp
game/Gui/: GameGui.cpp  GameGui.hpp  Grid.hpp  Math.hpp  Notify.cpp
game/Render/: GameRender.cpp  GameRender.hpp
game/Scenes/: GameScene.cpp  GameScene.hpp
game/Scenes/MainMenu/: MainMenu.cpp  MainMenu.hpp
game/Scenes/MainMenu/Gui/: MenuGui.cpp  MenuGui.hpp
game/Scenes/World/: FPSCamera.cpp  FPSCamera.hpp  World.cpp  World.hpp
game/Scenes/World/Gui/: Layout.cpp  Layout.hpp  WorldGui.cpp  WorldGui.hpp
game/Scenes/World/Gui/HUD/: HUDLayout.cpp  HUDLayout.hpp  SlotsContent.cpp  SlotsContent.hpp  SlotsLayout.cpp
game/States/: GameStates.hpp
game/lib/lua/: CMakeLists.txt
game/lib/sol/: forward.hpp  sol.hpp
tests/: CMakeLists.txt  main.cpp
tests/engine/: CMakeLists.txt  TestConfig.hpp  TestConfig.hpp.in
tests/engine/Engine/: CVarsTest.cpp
tests/engine/Engine/Events/: EventsTest.cpp  EventsTest.hpp
tests/engine/Engine/Files/: FileEntitiesTest.cpp  FileGltfTest.cpp  FileTest.cpp
tests/engine/Engine/Maths/: TransformationTest.cpp
tests/engine/Engine/Network/Sockets/: RequestTest.cpp  ServerSocketTest.cpp
tests/engine/Engine/Resources/: ResourcesManagerTest.cpp
tests/engine/Engine/Scripts/: LuaBindTest.cpp
tests/engine/Fixtures/: CVarsFixture.hpp
tests/engine/Fixtures/Files/: FileEntitiesFixture.hpp  FileFixture.hpp  FileGltfFixture.hpp  entities.json  gltf.gltf  json.json
tests/engine/Fixtures/Maths/: RotationFixture.hpp
tests/engine/Fixtures/Resources/: ResourceFixture.hpp  ResourcesManagerFixture.hpp
tests/engine/Fixtures/Sockets/: ServerSocketFixture.hpp
tests/engine/Fixtures/lua/: function.lua  game.lua  mod.lua  namespace.lua  register.lua
tests/game/: CMakeLists.txt  Config.hpp  Config.hpp.in
tests/game/Fixtures/: ClientFixture.hpp  HUDLayoutFixture.hpp  object_info.json  scene_info.json
tests/game/Fixtures/lua/: bad.lua
tests/game/Scenes/World/Client/: CommunicationTest.cpp
tests/game/Scenes/World/Gui/HUD/: HUDLayoutTest.cpp
tests/game/Scripts/: LuaBindTest.cpp
